FLY-2101,FLY-2050,FLY-2181,FLY-1558 bugs and improvements code changes

--- a/findly-builder/src/app/components/field-management/field-management.component.scss
+++ b/findly-builder/src/app/components/field-management/field-management.component.scss
@@ -209,3 +209,12 @@ perfect-scrollbar .ps--active-y{
     max-height: 300px;
     overflow: auto;
 }
+.type_sort_dropdown{   
+    .dropdown-open{                                
+        .dropdown-input{
+            img{
+                top: 0px !important;
+            }
+        }
+    }
+}
