--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -740,18 +740,14 @@
         </div>
       </perfect-scrollbar>
       <div class="footer-simulate-form simulatebtnContainer">
-        <span class="float-right mr-5"><button class="kr-sg-button-primary btn_lg" id="simulateBtn" (click)="simulate()"
+        <span class="float-right"><button class="kr-sg-button-primary btn_lg mr-0" id="simulateBtn" (click)="simulate()" placement="top-right"
             tooltipClass="workbench_tolltips m-0" [disabled]="simulteObj.simulating"
-            ngbTooltip="Test the field transformations before saving the configuration">
+            ngbTooltip="Simulate to check how the changes reflect in the documents before saving">
             <img src="assets/images/simulate.svg" class="mr-1" />{{
             simulteObj.simulating ? "Simulating.." : "Simulate"
             }}
           </button> 
-          <span class="mr-2" placement="top-right" ngbTooltip="Simulate to check how the changes reflect in the documents before saving" [container]="'body'" tooltipClass="dashboard-custom-tooltips" class="pl-1"> <img class="mr-5" src="assets/icons/help_gray.svg"/></span></span>
-        <button class="kr-sg-button-secondary btn_lg float-right" id="cancleUnsavedChanges"
-          [disabled]="!changesDetected" (click)="clearDirtyObj(true)">
-          Cancel
-        </button>
+        </span>
       </div>
     </div> 
   </div>
