--- a/findly-builder/src/app/components/pricing/pricing.component.html
+++ b/findly-builder/src/app/components/pricing/pricing.component.html
@@ -259,7 +259,7 @@
         </div>
       </div>
 
-      <div class="change-plan-container">
+      <div class="change-plan-container" *ngIf="currentSubscriptionPlan">
         <button class="kr-sg-button-secondary btn_lg" (click)="compare('choosePlans',currentSubscriptionPlan.subscription)">Change Plan</button>
         <div class="info-text">You can also choose to <span>Upgrade your Plan</span> </div>
         <div class="info-text" *ngIf="currentSubscriptionPlan.subscription.planId == plansIdList.standardMonth">Upgrade to <u>Pro</u> to get <span>{{overageDeatils.ingestDocs.limit | valueFormat}} documents</span> and <span>{{overageDeatils.searchQueries.limit | valueFormat}} Queries</span> per month.</div>
