invoice  top right coner downlload icon removed code changes

--- a/findly-builder/src/app/components/invoices/invoices.component.html
+++ b/findly-builder/src/app/components/invoices/invoices.component.html
@@ -12,9 +12,9 @@
             <div class="seach-block" *ngIf="(invoices && invoices.length)">
                 <span [ngClass]="{'d-none': showSearch}" class="mr-3" id="btn_toggle_search_structured_data" (click)="toggleSearch(true)"><img src="assets/icons/search.svg" [ngClass]="{'d-none': showSearch}">{{'search' | translate}}</span>
             </div> 
-            <div class="download-icon" tooltipClass="tooltip_custom margin-10" placement="bottom-right" container='body' ngbTooltip="Download Log">
+            <!-- <div class="download-icon" tooltipClass="tooltip_custom margin-10" placement="bottom-right" container='body' ngbTooltip="Download Log">
                 <img src="assets/icons/usage-log/download.svg">
-            </div>           
+            </div>            -->
         </div>
     </div>
     <div class="plan-type">
