--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -12478,6 +12478,7 @@ padding-right: 0;
     text-transform: none;
     font-size: 12px;
     color: #9AA0A6 !important;
+    margin-top: 0px;
 }
 
 .data-body-sec .structured-data-header .search-heads{
